sites/all/themes/custom/capl/assets/css/style.css
/* ... */
/* line 84, ../sass/partials/_menu.scss */
.drawer > ul > li a {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: block;
  font-size: 1.1em;
  padding: .5em 1em;
}
/* line 2, ../sass/global/_mixins.scss */
.drawer > ul > li a, .drawer > ul > li a:link {
  color: #bcbdbe;
}
/* line 7, ../sass/global/_mixins.scss */
.drawer > ul > li a:visited, .drawer > ul > li a:link:visited {
  color: #bcbdbe;
}
/* line 18, ../sass/global/_mixins.scss */
.drawer > ul > li a.active:hover, .drawer > ul > li a.active-trail:hover, .drawer > ul > li a:hover {
  color: #0DB2DF;
}
/* line 25, ../sass/global/_mixins.scss */
.drawer > ul > li a.active, .drawer > ul > li a:active, .drawer > ul > li a.active-trail {
  color: #bcbdbe;
}
/* line 92, ../sass/partials/_menu.scss */
.drawer > ul > li li {
  list-style: none;
  margin: 0;
  padding: 0 .5em;
}
/* line 96, ../sass/partials/_menu.scss */
.drawer > ul > li li a {
  font-size: 1em;
  padding: .5em 1.5em;
}
/* line 2, ../sass/global/_mixins.scss */
.drawer > ul > li li a, .drawer > ul > li li a:link {
  color: #838485;
}
/* line 7, ../sass/global/_mixins.scss */
.drawer > ul > li li a:visited, .drawer > ul > li li a:link:visited {
  color: #838485;
}
/* line 18, ../sass/global/_mixins.scss */
.drawer > ul > li li a.active:hover, .drawer > ul > li li a.active-trail:hover, .drawer > ul > li li a:hover {
  color: white;
}
/* line 25, ../sass/global/_mixins.scss */
.drawer > ul > li li a.active, .drawer > ul > li li a:active, .drawer > ul > li li a.active-trail {
  color: gray;
}

/* line 105, ../sass/partials/_menu.scss */
.navbar-default {
  background: transparent;
  border: none;
  min-height: 0;
}

/* line 110, ../sass/partials/_menu.scss */
.navbar-header {
  width: 100%;
}
/* line 112, ../sass/partials/_menu.scss */
.navbar-header .navbar-toggle {
  background-color: transparent;
  border: none;
  right: 0;
  top: 0;
  position: absolute;
  z-index: 100;
}
/* line 119, ../sass/partials/_menu.scss */
.navbar-header .navbar-toggle:hover, .navbar-header .navbar-toggle:focus {
  background-color: transparent;
}
/* line 123, ../sass/partials/_menu.scss */
.navbar-header .navbar-toggle .icon-bar {
  background-color: #3F484C;
  height: 3px;
}

/* line 1, ../sass/partials/_navbar.scss */
.navbar {
  background-color: white;
  height: 50px;
  max-width: 100%;
  padding: 0;
  position: fixed;
  top: 0;
  transition: all 0.2s ease-in-out;
  width: 100%;
  z-index: 1;
}
/* line 12, ../sass/partials/_navbar.scss */
.navbar.nav-up {
  top: -50px !important;
}
/* line 15, ../sass/partials/_navbar.scss */
.navbar.over {
  box-shadow: 0 1px 4px 1px #3F484C;
}
/* line 18, ../sass/partials/_navbar.scss */
.navbar .container {
  padding: 0 1em;
}

/* line 5, ../sass/partials/_node.scss */
.node-teaser h4 {
  margin: 0.25em 0 0;
}
/* line 2, ../sass/global/_mixins.scss */
.node-teaser h4 a, .node-teaser h4 a:link {
  color: #3F484C;
}
/* line 7, ../sass/global/_mixins.scss */
.node-teaser h4 a:visited, .node-teaser h4 a:link:visited {
  color: #3F484C;
}
/* line 18, ../sass/global/_mixins.scss */
.node-teaser h4 a.active:hover, .node-teaser h4 a.active-trail:hover, .node-teaser h4 a:hover {
  color: #0DB2DF;
}
/* line 25, ../sass/global/_mixins.scss */
.node-teaser h4 a.active, .node-teaser h4 a:active, .node-teaser h4 a.active-trail {
  color: #0DB2DF;
}
/* line 2, ../sass/global/_mixins.scss */
.node-teaser a, .node-teaser a:link {
  color: #7C8689;
}
/* line 7, ../sass/global/_mixins.scss */
.node-teaser a:visited, .node-teaser a:link:visited {
  color: #7C8689;
}
/* line 18, ../sass/global/_mixins.scss */
.node-teaser a.active:hover, .node-teaser a.active-trail:hover, .node-teaser a:hover {
  color: #3F484C;
}
/* line 25, ../sass/global/_mixins.scss */
.node-teaser a.active, .node-teaser a:active, .node-teaser a.active-trail {
  color: #3F484C;
}

/* line 17, ../sass/partials/_node.scss */
.node-program .field-name-body,
.node-blog {
  max-width: 750px;
}

/* line 24, ../sass/partials/_node.scss */
.node-type-program h1, .node-type-program #block-views-partners-block-1 h2, #block-views-partners-block-1 .node-type-program h2, .node-type-program #block-views-capl-team-block-1 h2, #block-views-capl-team-block-1 .node-type-program h2,
.node-type-project h1,
.node-type-project #block-views-partners-block-1 h2,
#block-views-partners-block-1 .node-type-project h2,
.node-type-project #block-views-capl-team-block-1 h2,
#block-views-capl-team-block-1 .node-type-project h2 {
  border-top: none;
}
/* line 26, ../sass/partials/_node.scss */
.node-type-program h1.title, .node-type-program #block-views-partners-block-1 h2.title, #block-views-partners-block-1 .node-type-program h2.title, .node-type-program #block-views-capl-team-block-1 h2.title, #block-views-capl-team-block-1 .node-type-program h2.title,
.node-type-project h1.title,
.node-type-project #block-views-partners-block-1 h2.title,
#block-views-partners-block-1 .node-type-project h2.title,
.node-type-project #block-views-capl-team-block-1 h2.title,
#block-views-capl-team-block-1 .node-type-project h2.title {
  display: none;
}
/* line 30, ../sass/partials/_node.scss */
.node-type-program .region-content,
.node-type-project .region-content {
  padding-left: 0;
}
/* line 32, ../sass/partials/_node.scss */
.node-type-program .region-content img,
.node-type-project .region-content img {
  padding: 0.5em;
}

@media (min-width: 801px) {
  /* line 40, ../sass/partials/_node.scss */
  .node-type-program .field-name-body {
    width: 80%;
    padding-left: 100px;
  }
}
@media (min-width: 801px) {
  /* line 46, ../sass/partials/_node.scss */
  .node-type-program .view-projects {
    width: 90%;
  }
}
/* line 50, ../sass/partials/_node.scss */
.node-type-program .view-projects:before {
  content: 'Program Case Studies';
  margin-bottom: 0.3em;
}
/* line 54, ../sass/partials/_node.scss */
.node-type-program .view-projects .node-teaser {
  padding-left: 0;
}
/* ... */

